--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ p {
 /* Hero Section */
 
 #hero{
-    background-image: url("img/hero-bg3.jpeg");
+    background-image: url("img/boston-sunset-evening-skyscrapers-cityscape.jpg");
     background-size: cover;
     background-position: top center;
     position: relative;
